network/security_group.tf
 resource "aws_security_group" "public" {
  name        = "public"
  description = "Allow port  inbound traffic"
  vpc_id      = aws_vpc.website.id

  ingress  {
    
    description      = "Allow ssh conection VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
  ingress  {
    
    description      = "Allow ssh conection VPC"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
  ingress  {
    
    description      = "Allow ssh conection VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "public"
  }
}
